[package]
name = "blake"
description = "Implementation of the BLAKE hash function via FFI for Rust"
documentation = "https://cdn.rawgit.com/nabijaczleweli/blake-rs/doc/blake/index.htmlhtml"
repository = "https://github.com/nabijaczleweli/blake-rs"
readme = "README.md"
keywords = ["hash", "blake"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.1.0"
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]
exclude = ["*.enc"]
build = "build.rs"


[dependencies]
libc = "0.2"

[build-dependencies]
gcc = "0.3"
