[package]
name = "blake"
description = "Implementation of the BLAKE hash function for Rust via FFI"
documentation = "https://rawcdn.githack.com/nabijaczleweli/blake-rs/doc/blake/index.htmlhtml"
repository = "https://github.com/nabijaczleweli/blake-rs"
readme = "README.md"
keywords = ["hash", "blake"]
categories = ["algorithms"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "2.0.1"
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]
exclude = ["*.enc"]
build = "build.rs"


[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1"
